@@ -22,7 +22,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 
 import org.antlr.v4.runtime.ParserRuleContext;
 
@@ -78,7 +77,7 @@ public class GrantMsPrivilege extends MsParserAbstract {
         }
 
         List<String> roles = ctx.name_list().id().stream()
-                .map(ParserRuleContext::getText).map(MsDiffUtils::quoteName).collect(Collectors.toList());
+                .map(ParserRuleContext::getText).map(MsDiffUtils::quoteName).toList();
 
         Columns_permissionsContext columnsCtx = ctx.columns_permissions();
         if (columnsCtx != null) {
@@ -87,7 +86,7 @@ public class GrantMsPrivilege extends MsParserAbstract {
         }
 
         List<String> permissions = ctx.permissions().permission().stream()
-                .map(ParserAbstract::getFullCtxText).collect(Collectors.toList());
+                .map(ParserAbstract::getFullCtxText).toList();
 
         PgStatement st = getStatement(nameCtx);
 
@@ -120,8 +119,8 @@ public class GrantMsPrivilege extends MsParserAbstract {
                     name.append('(').append(MsDiffUtils.quoteName(column.getText())).append(')');
                     PgPrivilege priv = new PgPrivilege(state, per, name.toString(), role, isGO, DatabaseType.MS);
                     // table column privileges to columns, other columns to statement
-                    if (st instanceof AbstractTable) {
-                        addPrivilege(getSafe(AbstractTable::getColumn, (AbstractTable) st, column), priv);
+                    if (st instanceof AbstractTable table) {
+                        addPrivilege(getSafe(AbstractTable::getColumn, table, column), priv);
                     } else {
                         addPrivilege(st, priv);
                     }
@@ -189,8 +188,8 @@ public class GrantMsPrivilege extends MsParserAbstract {
 
                 for (String role : roles) {
                     PgPrivilege priv = new PgPrivilege(state, pr, objectName, role, isGO, DatabaseType.MS);
-                    if (st instanceof AbstractTable) {
-                        addPrivilege(getSafe(AbstractTable::getColumn, (AbstractTable) st, col), priv);
+                    if (st instanceof AbstractTable table) {
+                        addPrivilege(getSafe(AbstractTable::getColumn, table, col), priv);
                     } else {
                         addPrivilege(st, priv);
                     }
